--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "colors": "^1.0.3",
-    "exception-formatter": "^1.0.4"
+    "exception-formatter": "^1.0.4",
+    "jsome": "2.5.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
